src/main/java/org/example/breakoutdrop/Errors/Server/CaseIsEmpty.java
package org.example.breakoutdrop.Errors.Server;

public class CaseIsEmpty extends RuntimeException {
  public CaseIsEmpty(String message) {
    super(message);
  }
}
